tests/test_helpers/Kub8Responses/postIngresses.json
{
    "kind": "Ingress",
    "apiVersion": "networking.k8s.io/v1",
    "metadata": {
      "name": "iab",
      "namespace": "default",
      "uid": "1f74d220-0d1c-4904-83a0-4a8e26867c34",
      "resourceVersion": "3084703",
      "generation": 1,
      "creationTimestamp": "2022-05-10T13:02:45Z",
      "annotations": {
        "cert-manager.io/cluster-issuer": "letsencrypt-prod-ingress",
        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"cert-manager.io/cluster-issuer\":\"letsencrypt-prod-ingress\"},\"name\":\"iab\",\"namespace\":\"default\"},\"spec\":{\"ingressClassName\":\"nginx\",\"rules\":[{\"host\":\"iab.steercampaign.com\",\"http\":{\"paths\":[{\"backend\":{\"service\":{\"name\":\"iab\",\"port\":{\"number\":80}}},\"path\":\"/\",\"pathType\":\"ImplementationSpecific\"}]} [...]
      },
      "managedFields": [
        {
          "manager": "kubectl-client-side-apply",
          "operation": "Update",
          "apiVersion": "networking.k8s.io/v1",
          "time": "2022-05-10T13:02:45Z",
          "fieldsType": "FieldsV1",
          "fieldsV1": {
            "f:metadata": {
              "f:annotations": {
                ".": {},
                "f:cert-manager.io/cluster-issuer": {},
                "f:kubectl.kubernetes.io/last-applied-configuration": {}
              }
            },
            "f:spec": {
              "f:ingressClassName": {},
              "f:rules": {},
              "f:tls": {}
            }
          }
        }
      ]
    },
    "spec": {
      "ingressClassName": "nginx",
      "tls": [
        {
          "hosts": [
            "iab.steercampaign.com"
          ],
          "secretName": "iab"
        }
      ],
      "rules": [
        {
          "host": "iab.steercampaign.com",
          "http": {
            "paths": [
              {
                "path": "/",
                "pathType": "ImplementationSpecific",
                "backend": {
                  "service": {
                    "name": "iab",
                    "port": {
                      "number": 80
                    }
                  }
                }
              }
            ]
          }
        }
      ]
    },
    "status": {
      "loadBalancer": {}
    }
  }
